k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio-staging
  labels:
    app.kubernetes.io/name: portfolio
spec:
  selector:
    app.kubernetes.io/name: portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
